test/expected/define_ns_c_ns_c.out
namespace N { class C; }; define D of namespace C of namespace N as class D
          ^
11: error: "N::C" was previously declared as class:
> namespace N { class C; }
